<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="eoM-Rh-CDb">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Braking Bad-->
        <scene sceneID="fIK-c8-1pz">
            <objects>
                <tableViewController id="Uw3-KY-kOT" customClass="CharacterList" customModule="BreakingBadModris" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="e1e-Tr-qjC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="characterCell" id="UA0-b8-YTE">
                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="UA0-b8-YTE" id="K98-TW-dAa">
                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                </tableViewCellContentView>
                                <connections>
                                    <segue destination="kBg-Da-ENl" kind="show" identifier="toSpecificQuote" id="Lgl-Jm-42l"/>
                                </connections>
                            </tableViewCell>
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="Uw3-KY-kOT" id="1H5-Ca-3Ew"/>
                            <outlet property="delegate" destination="Uw3-KY-kOT" id="1VC-CH-zpq"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Braking Bad" id="u71-WC-W1D">
                        <barButtonItem key="rightBarButtonItem" title="Random Quote" id="kxn-Yo-3Wj">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="randomQueueButton"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <segue destination="kBg-Da-ENl" kind="show" identifier="toRandomQuote" id="9eG-Vh-SFj"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="9wJ-oP-ozF">
                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <connections>
                            <action selector="refresh:" destination="Uw3-KY-kOT" eventType="valueChanged" id="Tc9-gG-3wu"/>
                        </connections>
                    </refreshControl>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="WrS-Wx-N0m" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="3276.811594202899" y="57.589285714285708"/>
        </scene>
        <!--Quotes-->
        <scene sceneID="R3Z-QF-J1c">
            <objects>
                <viewController id="kBg-Da-ENl" customClass="QuoteViewController" customModule="BreakingBadModris" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="pUa-hw-kbG">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gyt-bH-YKF">
                                <rect key="frame" x="12" y="308" width="390" height="0.0"/>
                                <accessibility key="accessibilityConfiguration" identifier="authorLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="authorLabel"/>
                                </userDefinedRuntimeAttributes>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dKQ-VZ-v7G">
                                <rect key="frame" x="12" y="288" width="390" height="0.0"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="quoteLabel"/>
                                </userDefinedRuntimeAttributes>
                            </label>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="5Pd-wq-bad" firstAttribute="trailing" secondItem="gyt-bH-YKF" secondAttribute="trailing" constant="12" id="4xg-Ui-U7u"/>
                            <constraint firstItem="gyt-bH-YKF" firstAttribute="top" secondItem="dKQ-VZ-v7G" secondAttribute="bottom" constant="20" id="CmI-xn-vZx"/>
                            <constraint firstItem="5Pd-wq-bad" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="gyt-bH-YKF" secondAttribute="bottom" constant="12" id="GvP-Vk-Xyf"/>
                            <constraint firstItem="dKQ-VZ-v7G" firstAttribute="leading" secondItem="5Pd-wq-bad" secondAttribute="leading" constant="12" id="SfE-U5-sJX"/>
                            <constraint firstItem="dKQ-VZ-v7G" firstAttribute="top" secondItem="5Pd-wq-bad" secondAttribute="top" constant="200" id="Su4-eR-WSy"/>
                            <constraint firstItem="gyt-bH-YKF" firstAttribute="leading" secondItem="5Pd-wq-bad" secondAttribute="leading" constant="12" id="chN-ax-MyX"/>
                            <constraint firstItem="5Pd-wq-bad" firstAttribute="trailing" secondItem="dKQ-VZ-v7G" secondAttribute="trailing" constant="12" id="seb-bn-paQ"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="5Pd-wq-bad"/>
                    </view>
                    <navigationItem key="navigationItem" title="Quotes" id="xOg-c6-INp">
                        <barButtonItem key="rightBarButtonItem" title="Item" image="square.and.arrow.up" catalog="system" width="70" id="Kdl-yJ-GML">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="shareButton"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <action selector="shareQuote:" destination="kBg-Da-ENl" id="OI3-Xc-ZKL"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <outlet property="authorLabel" destination="gyt-bH-YKF" id="Onx-6R-E9n"/>
                        <outlet property="quoteLabel" destination="dKQ-VZ-v7G" id="EXi-6I-XmT"/>
                        <outlet property="shareBtn" destination="Kdl-yJ-GML" id="9gV-TI-iE2"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Yjo-7C-lJY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="4439.130434782609" y="57.589285714285708"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="YjR-J7-MBf">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="eoM-Rh-CDb" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="UVK-F9-s6X">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="MQK-rm-pXi" kind="relationship" relationship="rootViewController" id="0GB-8z-P8Q"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dh9-sL-qru" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1339" y="58"/>
        </scene>
        <!--Initial View Controller-->
        <scene sceneID="2Wj-Ef-Vtw">
            <objects>
                <viewController id="MQK-rm-pXi" customClass="InitialViewController" customModule="BreakingBadModris" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="uhh-4s-s5W">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <viewLayoutGuide key="safeArea" id="PUb-ud-W69"/>
                    </view>
                    <navigationItem key="navigationItem" id="94Q-6k-mD6"/>
                    <connections>
                        <segue destination="Uw3-KY-kOT" kind="show" identifier="toCharacterList" id="7w4-6L-xlr"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="VqU-eX-OF6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2313" y="58"/>
        </scene>
    </scenes>
    <resources>
        <image name="square.and.arrow.up" catalog="system" width="56" height="64"/>
    </resources>
    <inferredMetricsTieBreakers>
        <segue reference="9eG-Vh-SFj"/>
    </inferredMetricsTieBreakers>
</document>
